5.0.0 -> 5.1a1:
    - proyvind: expose more functions in rpmps API (as rpm.org, initially based on us ;p)
    - jbj: fix: plug memory leak with digest algos array.
    - jbj: fix: --relocate no longer needs to copy dirIndexes data.
    - proyvind: make perl install directory overriddable from configure as an argument (--with-perl=vendor/site)
    - proyvind: fix install location of man pages for perl bindings
    - proyvind: fix install location of pkgconfig & python bindings (lib64 fix)
    - jbj: don't follow symlinks using chown/chgrp from --setugids pipe.
    - jbj: sync *.po with the translation project (sr@latin.po needs work).
    - rse: add a RPM Lua function rpm.sleep() as a trivial frontend to sleep(3)
    - rse: fix PGP clearsign signature verification by correctly skipping RFC2440 "dash-escapes"
    - rse: fix line-continuation handling in macro definition parsing
    - rse: implement RPM Lua function util.textwrap() for auto-wrapping junks of larger text messages
    - rse: upgrade RPM Lua functions util.rmatch(), util.rsubst() and util.rsplit() to new lrexlib 2.2
    - rse: upgrade the RPM Lua extension lrexlib from ancient version 1.1x to latest version 2.2
    - jbj: permit opt-in network access using %_rpmgio macro.
    - jbj: fix: deny rpmioSlurp network access (like all other Fopen call's).
    - rse: add RPM Lua function rpm.slurp() for slurping in the whole content of a file or an URL
    - rse: add OSSP uuid support to RPM Lua via functions uuid.generate() and uuid.describe()
    - rpm.org: Assorted int -> size_t corrections for string lengths.
    - rpm.org: More assorted int -> size_t uses.

=============================================================================

5.0b4 -> 5.0.0:
    - rse: final polishing of NEWS document
    - rse: align "rpm [--verbose] --version" output with the syntax used in mostly all GNU tools nowadays
    - mgh: allow --ignoresize when doing an erase