@@ -500,6 +500,21 @@ rpmRC rpmtsFindPubkey(rpmts ts, /*@null@*/ void * _dig)
 	/*@modifies ts, _dig, rpmGlobalMacroContext, fileSystem, internalState */;
 /*@=exportlocal@*/
 
+/** \ingroup rpmcli
+ * Import public key packet(s).
+ * @todo Implicit --update policy for gpg-pubkey headers.
+ * @param ts		transaction set
+ * @param pkt		pgp pubkey packet(s)
+ * @param pktlen	pgp pubkey length
+ * @return		RPMRC_OK/RPMRC_FAIL
+ */
+rpmRC rpmtsImportPubkey(const rpmts ts,
+		const unsigned char * pkt, ssize_t pktlen)
+	/*@globals RPMVERSION, rpmGlobalMacroContext, h_errno,
+		fileSystem, internalState @*/
+	/*@modifies ts, rpmGlobalMacroContext,
+		fileSystem, internalState @*/;
+
 /** \ingroup rpmts
  * Close the database used by the transaction to solve dependencies.
  * @param ts		transaction set
