@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - proyvind: Rename rpmcliImportPubkey() -> rpmtsImportPubkey() (from and for a hint of rpm.org API compatibility;)
     - proyvind: expose more functions in rpmps API (as rpm.org, initially based on us ;p)
     - jbj: fix: plug memory leak with digest algos array.
     - jbj: fix: --relocate no longer needs to copy dirIndexes data.
